--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   background: $off-black;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
   color: white;
   padding: $m-size 0;
 }
@@ -14,4 +14,10 @@
   font-size: $m-size;
   font-weight: 500;
   margin: 0;
+}
+
+@media (min-width: $desktop-breakpoing) {
+  .header {
+    margin-bottom: $xl-size;
+  }
 }
