--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -23,3 +23,13 @@
   padding: $l-size;
   text-align: center;
 }
+
+.modal__title {
+  margin: 0 0 $l-size;
+}
+.modal__body {
+  font-size: 2rem;
+  font-weight: 300;
+  margin: 0 0 $m-size 0;
+  word-break: break-all;
+}
